--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -22,7 +22,7 @@ mixin navbar(value = {})
 					.layout-spacer
 					.navbar-foot.navbar-mobile
 						.layout-inline-block
-							a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
+							a.navbar-menu.action-btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.layer-mid-dark-focus.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
 								span.action-btn-group
 									i.action-icon.style-font-family-bold.style-font-size-24(inline) menu
 
