--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -49,7 +49,7 @@ block content
 
 	//- Next page layer
 	+layer({
-		class: "layout-padding-horz layer-dark"
+		class: "layout-padding-horz layer-black"
 	})
 		+layout({
 			class: "layout-contain layout-padding-horz layout-padding-top"
