Qucik bug fixes

--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -91,7 +91,7 @@
         &--1 {
             // box-shadow: 0 5px 14px 6px rgba(0,0,0,.23);
             // box-shadow: 0 5px 14px 6px rgba(19, 19, 19, 0.23);
-            border: 2px solid change-color($dark, $alpha: 0.7);
+            border: 1px solid change-color($white, $alpha: 0.7);
             // border-color: var(--tertiary, white);
             // border: 2px solid var(--dark);
             // border: 2px solid rgba(255, 255, 255, 0.35);
