--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -159,7 +159,7 @@
                 @include applyTheme(color, "dark");
 
                 .navbar-link-content:before {
-                    transform: translateY($height - 14px) scaleX(1) ;
+                    transform: translateY($height - 14px) scaleX(1);
                     transform-origin: 0 50%;
                 }
             }
@@ -172,7 +172,8 @@
             &-focus {
                 &, &:focus {
                     color: $primary-dark;
-                    @include applyTheme(color, "primary-dark");
+                    color: var(--primary-light, $primary-dark);
+                    // @include applyTheme(color, "primary");
                 }
 
                 &:before {
