Error checking when piping to gulp

--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -21,7 +21,7 @@ mixin footer(value = {})
 							span.action-btn-spacer
 				+link({
 					href: "/sitemap",
-					class: "layout-inline-block layout-margin-left-mini",
+					class: "layout-inline-block",
 					content: "Sitemap"
 				})
 				span= " | "
