--- a/views/app.pug
+++ b/views/app.pug
@@ -66,11 +66,11 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		link(rel="manifest", href="manifest.webmanifest")
 		link(rel="home", href="https://www.josephojo.com/")
 
-		meta(name="theme-color", content="#3b3c3e")
+		meta(name="theme-color", content="#2d22ca")
 		meta(name="twitter:card", content="summary")
 		meta(name="msapplication-TileColor", content="#3b3c3e")
 		meta(name="apple-mobile-web-app-capable", content="yes")
-		meta(name="apple-mobile-web-app-status-bar-style", content="#3b3c3e")
+		meta(name="apple-mobile-web-app-status-bar-style", content="#2d22ca")
 		meta(name="msapplication-TileImage", content="/ms-icon-144x144.png")
 
 		//- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
