--- a/views/app.pug
+++ b/views/app.pug
@@ -77,7 +77,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="prefetch" href="./css/app.min.css" as="style" crossorigin)
+		link(rel="preload" href="./css/app.min.css" as="style" crossorigin)
 		link(rel="stylesheet" href="./css/app.min.css" async)
 
 		<!--[if lt IE 9]>
