--- a/views/app.pug
+++ b/views/app.pug
@@ -85,7 +85,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 			link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
 		<![endif]-->
 
-		script(src="./js/ver-check.min.js" async)
+		script(src="./js/ver-check.min.js" ph-inline async)
 	body
 		+link({
 			class: "skip-main",
