--- a/views/app.pug
+++ b/views/app.pug
@@ -38,31 +38,31 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="twitter:site", content="@jo-ojo")
 		meta(property="article:author" content="Joseph Ojo")
 		meta(property="og:site_name" content="josephojo.com")
-		meta(itemprop="image" content="https://www.josephojo.com/android-icon-512x512.png")
-		meta(property="og:image" content="https://www.josephojo.com/android-icon-512x512.png")
-		meta(name="twitter:image" content="https://www.josephojo.com/android-icon-512x512.png")
+		meta(itemprop="image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
+		meta(property="og:image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
+		meta(name="twitter:image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
 
 		block seo
 			+seo(page)
 
-		link(rel="apple-touch-icon", sizes="57x57", href="/apple-icon-57x57.png")
-		link(rel="apple-touch-icon", sizes="60x60", href="/apple-icon-60x60.png")
-		link(rel="apple-touch-icon", sizes="72x72", href="/apple-icon-72x72.png")
-		link(rel="apple-touch-icon", sizes="76x76", href="/apple-icon-76x76.png")
-		link(rel="apple-touch-icon", sizes="114x114", href="/apple-icon-114x114.png")
-		link(rel="apple-touch-icon", sizes="120x120", href="/apple-icon-120x120.png")
-		link(rel="apple-touch-icon", sizes="144x144", href="/apple-icon-144x144.png")
-		link(rel="apple-touch-icon", sizes="152x152", href="/apple-icon-152x152.png")
-		link(rel="apple-touch-icon", sizes="180x180", href="/apple-icon-180x180.png")
-		link(rel="mask-icon", href="/favicon.svg", color="#000000")
+		link(rel="apple-touch-icon", sizes="57x57", href="/favicon/apple-icon-57x57.png")
+		link(rel="apple-touch-icon", sizes="60x60", href="/favicon/apple-icon-60x60.png")
+		link(rel="apple-touch-icon", sizes="72x72", href="/favicon/apple-icon-72x72.png")
+		link(rel="apple-touch-icon", sizes="76x76", href="/favicon/apple-icon-76x76.png")
+		link(rel="apple-touch-icon", sizes="114x114", href="/favicon/apple-icon-114x114.png")
+		link(rel="apple-touch-icon", sizes="120x120", href="/favicon/apple-icon-120x120.png")
+		link(rel="apple-touch-icon", sizes="144x144", href="/favicon/apple-icon-144x144.png")
+		link(rel="apple-touch-icon", sizes="152x152", href="/favicon/apple-icon-152x152.png")
+		link(rel="apple-touch-icon", sizes="180x180", href="/favicon/apple-icon-180x180.png")
+		link(rel="mask-icon", href="/favicon/favicon.svg", color="#000000")
 
-		link(rel="icon", type="image/png", sizes="512x512", href="/android-icon-512x512.png")
-		link(rel="icon", type="image/png", sizes="192x192", href="/android-icon-192x192.png")
-		link(rel="icon", type="image/png", sizes="144x144", href="/android-icon-144x144.png")
-		link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
-		link(rel="icon", type="image/png", sizes="96x96", href="/favicon-96x96.png")
-		link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
-		link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
+		link(rel="icon", type="image/png", sizes="512x512", href="/favicon/favicon/android-icon-512x512.png")
+		link(rel="icon", type="image/png", sizes="192x192", href="/favicon/android-icon-192x192.png")
+		link(rel="icon", type="image/png", sizes="144x144", href="/favicon/android-icon-144x144.png")
+		link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
+		link(rel="icon", type="image/png", sizes="96x96", href="/favicon/favicon-96x96.png")
+		link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
+		link(rel="shortcut icon", href="/favicon/favicon.ico", type="image/x-icon")
 		link(rel="manifest", href="manifest.webmanifest")
 		link(rel="home", href="https://www.josephojo.com/")
 
@@ -71,7 +71,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="msapplication-TileColor", content="#3b3c3e")
 		meta(name="apple-mobile-web-app-capable", content="yes")
 		meta(name="apple-mobile-web-app-status-bar-style", content="#2d22ca")
-		meta(name="msapplication-TileImage", content="/ms-icon-144x144.png")
+		meta(name="msapplication-TileImage", content="/favicon/ms-icon-144x144.png")
 
 		//- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
@@ -114,4 +114,4 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		block footer
 			+footer
 
-		script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` async)
+		script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` ph-inline async)
