--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -273,7 +273,7 @@ $sizes: (
 }
 
 @import "./components/base.scss";
-@import "./components/fonts.scss";
+// @import "./components/fonts.scss";
 @import "./components/navbar.scss";
 @import "./components/style.scss";
 @import "./components/action.scss";
