--- a/views/app.pug
+++ b/views/app.pug
@@ -78,6 +78,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="./maps/app.min.css.map" as="fetch" crossorigin)
+		link(rel="stylesheet" href="./css/fonts.min.css" ph-inline async)
 		link(rel="stylesheet" href="./css/app.min.css" async)
 
 		<!--[if lt IE 9]>
