--- a/views/app.pug
+++ b/views/app.pug
@@ -18,15 +18,15 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		link(rel="preconnect" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
 		link(rel="dns-prefetch" href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
 
-		link(rel="preconnect" href="https://www.josephojo.com/" crossorigin)
-		link(rel="dns-prefetch" href="https://www.josephojo.com/" crossorigin)
+		link(rel="preconnect" href="https://josephojo.com/" crossorigin)
+		link(rel="dns-prefetch" href="https://josephojo.com/" crossorigin)
 
 		meta(charset="utf-8")
 		meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
 		meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 
 		//- if dev
-			meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://www.josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/;")
+			meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; child-src 'none'; frame-src 'none'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/;")
 
 		meta(name="robots" content="index, follow")
 		meta(name="copyright" content="Joseph Ojo")
@@ -38,9 +38,9 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="twitter:site", content="@jo-ojo")
 		meta(property="article:author" content="Joseph Ojo")
 		meta(property="og:site_name" content="josephojo.com")
-		meta(itemprop="image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
-		meta(property="og:image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
-		meta(name="twitter:image" content="https://www.josephojo.com/favicon/android-icon-512x512.png")
+		meta(itemprop="image" content="https://josephojo.com/favicon/android-icon-512x512.png")
+		meta(property="og:image" content="https://josephojo.com/favicon/android-icon-512x512.png")
+		meta(name="twitter:image" content="https://josephojo.com/favicon/android-icon-512x512.png")
 
 		block seo
 			+seo(page)
@@ -64,7 +64,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
 		link(rel="shortcut icon", href="/favicon/favicon.ico", type="image/x-icon")
 		link(rel="manifest", href="manifest.webmanifest")
-		link(rel="home", href="https://www.josephojo.com/")
+		link(rel="home", href="https://josephojo.com/")
 
 		meta(name="theme-color", content="#2d22ca")
 		meta(name="twitter:card", content="summary")
