--- a/views/components/seo.pug
+++ b/views/components/seo.pug
@@ -9,10 +9,10 @@ mixin seo(value = {})
 	meta(name="apple-mobile-web-app-title", content=title)
 
 	meta(name="shortlink" content=`https://josephojo.com${url}`)
-	meta(itemprop='url' content=`https://www.josephojo.com${url}`)
-	meta(name="canonical" content=`https://www.josephojo.com${url}`)
-	meta(property='og:url' content=`https://www.josephojo.com${url}`)
-	meta(name='twitter:url' content=`https://www.josephojo.com${url}`)
+	meta(itemprop='url' content=`https://josephojo.com${url}`)
+	meta(name="canonical" content=`https://josephojo.com${url}`)
+	meta(property='og:url' content=`https://josephojo.com${url}`)
+	meta(name='twitter:url' content=`https://josephojo.com${url}`)
 
 	meta(name='description' content=description)
 	meta(itemprop='description' content=description)
