--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -2,7 +2,7 @@ mixin footer(value = {})
 	- let _class = value.class;
 	footer.footer(data-container itemprop="author")
 		.layout-contain.transition-fade(class=_class)
-			.layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://www.josephojo.com")
+			.layout-padding.style-center.style-font-weight-bold.style-font-title.style-spaceout-small(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
 				span Made with ❤ by
 				span= " "
 				+link({
