--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -8,13 +8,12 @@ mixin image(value = {})
 		figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
 			.img-contain
 				picture
-					each n in [3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
-						- let val = n > 5 && n <= 8 ? 70 : 40;
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/webp')
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=${val}` sizes=`(max-width: ${n}00px) ${n}00px` width=`${n}00px` type='image/jpeg')
+					each n in [3, 6]
+						source(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/webp')
+						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/jpeg')
 
-					source(media='(min-width: 1200px)' srcset!=`${src}.webp?w=1250&quality=45` sizes="100vw" width="100vw" type='image/webp')
-					//- source(media='(min-width: 1200px)' srcset!=`${src}.jpg?quality=60` sizes="100vw" width="100vw" type='image/jpeg')
+					source(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=45` sizes="100vw" width="100vw" type='image/webp')
+					source(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=60` sizes="100vw" width="100vw" type='image/jpeg')
 					img.core-img(src!=`${src}.jpg` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
 				picture
 					//-  inline
