--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -16,8 +16,8 @@ mixin footer(value = {})
 						i.action-icon(inline) copyright
 						span.action-btn-section
 							span.action-btn-spacer
-							span(itemprop="copyrightYear") 2019
-							span(itemprop="copyrightHolder")  Joseph Ojo -
+							span 2019
+							span  Joseph Ojo -
 							span.action-btn-spacer
 				+link({
 					href: "/sitemap",
