--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -37,7 +37,7 @@
         top: 0;
 
         & picture {
-            position: relative;
+            position: absolute;
             // // overflow: hidden;
             display: block;
             height: 100%;
