--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -15,7 +15,7 @@ mixin navbar(value = {})
 					+link({
 						href: "/",
 						class: "navbar-title style-primary-dark-hover style-primary-focus"
-					})(itemprop="url" data-swup-preload)
+					})(itemprop="url")
 						img.navbar-logo(src="/assets/gear-svg-icon-logo-color-2.svg" alt="Logo." inline)
 						span.navbar-title-line
 						span.layout-inline-block(itemprop="name") JOSEPH!
