--- a/views/components/image.pug
+++ b/views/components/image.pug
@@ -8,16 +8,16 @@ mixin image(value = {})
 		figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")
 			.img-contain
 				picture
-					each n in [3, 6]
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/webp')
-						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/jpeg')
-
-					source(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=45` sizes="100vw" width="100vw" type='image/webp')
-					source(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=60` sizes="100vw" width="100vw" type='image/jpeg')
-					img.core-img(src!=`${src}.jpg` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
-				picture
 					//-  inline
 					img.placeholder-img(src!=`${src}.jpg?w=60&quality=70&effect=blur:120` sizes="100vw" width="100vw" alt=alt loading="lazy" itemprop="url")
+				picture
+					each n in [3, 6]
+						source.webp(media=`(max-width: ${n}00px)` srcset!=`${src}.webp?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/webp')
+						source(media=`(max-width: ${n}00px)` srcset!=`${src}.jpg?w=${n}00&quality=70` sizes=`${n}00px` width=`${n}00px` type='image/jpeg')
+
+					source.webp(media='(max-width: 900px)' srcset!=`${src}.webp?w=900&quality=45` sizes="100vw" width="100vw" type='image/webp')
+					source(media='(min-width: 900px)' srcset!=`${src}.webp?w=950&quality=60` sizes="100vw" width="100vw" type='image/jpeg')
+					img.core-img(src!=`${src}.jpg` sizes="(max-width: 500px) 500px,(max-width: 700px) 700px,(max-width: 900px) 900px, 100vw" alt=alt loading="lazy" width="100vw" itemprop="url")
 				noscript Javascript is necesscary for this sites awesome experience.
 					picture
 						source(srcset!=`${src}.webp` sizes="100vw" width="100vw" type='image/webp')
