--- a/views/app.pug
+++ b/views/app.pug
@@ -74,10 +74,10 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
 		meta(name="msapplication-TileImage", content="/favicon/ms-icon-144x144.png")
 
 		link(rel="stylesheet" href="./css/fonts.min.css" ph-inline async)
-		link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/montserrat--bold_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font" type="font/woff2" crossorigin)
-		link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
+		//- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
 		//- link(rel="preload" href="./maps/app.min.css.map" as="fetch" crossorigin)
 		link(rel="stylesheet" href="./css/app.min.css" ph-inline async)
 
