--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -10,7 +10,7 @@
     }
 
     &-in-view {
-        transition: opacity 0.25s ease 0s;
+        transition: opacity 0.35s ease-out 0s;
         // , transform 0.4s ease 0.1s
         // transform: translateY(0px);
         opacity: 1;
