--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -2,11 +2,12 @@ include ./image.pug
 
 mixin hero(value = {})
 	- let { content, title, image } = value;
+	- Object.assign(image, { class: "effect-parallax hero-img" });
 
 	.layer.layer-hero-id.header-top-spot
 		article.layout-padding-bottom.layout-padding-dull-top.layout-contain-larger.layout-padding-horz-small
 			.layer-hero
-				+image({ class: "effect-parallax hero-img", ...image })
+				+image(image)
 
 				.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
 					.layer-content.layout-contain
