--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -138,7 +138,7 @@ $colors: (
 $dark-colors: (
     "primary-light": $primary-light,
     "primary": $primary,
-    "primary-dark": #5031a0,
+    "primary-dark": #7860b7,
     "secondary-light": $secondary-light,
     "secondary": $secondary,
     "secondary-dark": $secondary-dark,
