Fixed other bugs

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -103,7 +103,7 @@ block content
 					})
 						+p({
 							content: "Breakthrough<br>Limits!",
-							class: "style-color-primary style-bold-font style-600 style-font-30 style-line-height"
+							class: "style-color-primary-dark style-bold-font style-600 style-font-30 style-line-height"
 						})
 
 					//- 2nd Column
