Cleaner animation, dark and light mode bugs fixed

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -248,6 +248,7 @@ $sizes: (
             &-#{$prefix}-#{$action}-#{$name}:#{$action},
             &-#{$prefix}-#{$name}-#{$action}:#{$action} {
                 @if ($themeable) {
+                    transition: #{$property} .45s ease;
                     @include applyTheme($property, $name);
                 } @else {
                     #{$property}: $value;
@@ -257,6 +258,7 @@ $sizes: (
             &-#{$name},
             &-#{$prefix}-#{$name} {
                 @if ($themeable) {
+                    transition: #{$property} .45s ease;
                     @include applyTheme($property, $name);
                 } @else {
                     #{$property}: $value;
